--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 
     <script src="view.js"></script>
 
-
-
-
 </head>
+
+
 <body id="body">
 
   <div class="c4">
-    <h3>use WASD to drive the bike</h3>
+    <h3>use WASD to drive the blue bike</h3>
+    <h3>use IJKL to drive the red bike</h3>
+    <h3>a collision will be shown if the bikes collide</h3>
 
   </div>
 
@@ -30,6 +31,11 @@
     var arenaWidth = 600;
     var arenaHeight = 600;
 
+    //assign the bike objects to variables so we can move them around after they are initially created/drawn (unlike walls, which can be drawn and left where they are)
+    var bike1View;
+    var bike2View;
+
+    var collision1View;
 
 
     var tronView = new TronView(arenaWidth, arenaHeight);
@@ -39,32 +45,110 @@
 
 
 
+    //bike1
+    var bike1_x = 60;
+    var bike1_y = 60;
+    var bike1_color = 0x0000CC;
+    var bike1_speed = 10;
 
-    var bike_x = 75;
-    var bike_y = 75;
-    var bike_color = 0x0000CC;
-    var bike_speed = 10;
+    bike1View = arenaView.addBike(bike1_x, bike1_y, bike1_color);
 
-    arenaView.drawBike(bike_x, bike_y, bike_color);
+    //bike2
+    //var bike2_x = 540;
+    //var bike2_y = 540;
+    var bike2_x = 60;
+    var bike2_y = 80;
+    var bike2_color = 0xFF0000;
+    var bike2_speed = 10;
 
-    //redraw bike to the top(w), left(a), bottom(s), right(d)
-    $(document).keypress(function(e){
+    bike2View = arenaView.addBike(bike2_x, bike2_y, bike2_color);
+
+
+
+    //begin animation loop
+    requestAnimFrame(animate);
+
+    //run animation loop
+    function animate()
+    {
+        
+        //DO OTHER CONTROLLER STUFF HERE  
+
+        //collision animation
+        if (collision1View && collision1View.radius > 0)
+        {
+            collision1View.radius += 4;
+            if (collision1View.radius >= 80) collision1View.radius = 0;
+
+            //we can't simply change the radius, the object has to be redrawn to reflect the adjusted radius
+            //redraw is a method I wrote, it's not built into the api
+            collision1View.redraw();
+        }
+
+
+
+
+        requestAnimFrame(animate);
+        view_renderer.render(view_stage);     // render the stage
+    }
+
+
+
+    //move bike1 up(w), left(a), down(s), right(d)
+    //move bike2 up(i), left(j), down(k), right(l)
+    //keydown and keypress events fire repeatedly while a key is pressed, but keyup events only fire on a keyup
+    $(document).keyup(function(e){
         var key = e.which;
 
         console.log("key: " + key);
 
-        if (key == 119)      bike_y -= bike_speed;  //w
-        else if (key == 97)  bike_x -= bike_speed;  //a
-        else if (key == 115) bike_y += bike_speed;  //s
-        else if (key == 100) bike_x += bike_speed;  //d
+
+        //for bike1
+        if (key == 87)      bike1_y -= bike1_speed;  //w
+        else if (key == 65) bike1_x -= bike1_speed;  //a
+        else if (key == 83) bike1_y += bike1_speed;  //s
+        else if (key == 68) bike1_x += bike1_speed;  //d
 
         //keep bike in the arena
-        if (bike_x >= arenaWidth) bike_x = arenaWidth - bike_speed;
-        if (bike_x < 0) bike_x = 0;
-        if (bike_y >= arenaHeight) bike_y = arenaHeight - bike_speed;
-        if (bike_y < 0) bike_y = 0;
+        if (bike1_x >= arenaWidth) bike1_x = arenaWidth - bike1_speed;
+        if (bike1_x < 0) bike1_x = 0;
+        if (bike1_y >= arenaHeight) bike1_y = arenaHeight - bike1_speed;
+        if (bike1_y < 0) bike1_y = 0;
 
-        arenaView.drawBike(bike_x, bike_y, bike_color);
+        //draw wall behind bike
+        arenaView.drawWall(bike1View.x, bike1View.y, bike1_x, bike1_y, bike1_color);
+
+        //move the bike
+        bike1View.x = bike1_x;
+        bike1View.y = bike1_y;
+
+
+        //for bike2
+        if (key == 73)      bike2_y -= bike2_speed;  //i
+        else if (key == 74) bike2_x -= bike2_speed;  //j
+        else if (key == 75) bike2_y += bike2_speed;  //k
+        else if (key == 76) bike2_x += bike2_speed;  //l
+
+        //keep bike in the arena
+        if (bike2_x >= arenaWidth) bike2_x = arenaWidth - bike2_speed;
+        if (bike2_x < 0) bike2_x = 0;
+        if (bike2_y >= arenaHeight) bike2_y = arenaHeight - bike2_speed;
+        if (bike2_y < 0) bike2_y = 0;
+
+        //draw wall behind bike
+        arenaView.drawWall(bike2View.x, bike2View.y, bike2_x, bike2_y, bike2_color);
+
+        //move the bike
+        bike2View.x = bike2_x;
+        bike2View.y = bike2_y;
+
+
+        //draw collision when bikes hit eachother
+        if (bike1View.x == bike2View.x && bike1View.y == bike2View.y)
+        {
+            collision1View = arenaView.addCollision(bike1View.x, bike1View.y);
+            collision1View.radius++;
+        }
     });
 
 </script>
