--- a/paulsIndex.html
+++ b/paulsIndex.html
@@ -14,6 +14,10 @@
 
     <script src="view.js"></script>
 
+    <script src="spintf.min.js"></script>
+    <script src="Model.js"></script>
+    <script src="ModelUnitTests.js"></script>
+
 </head>
 
 
@@ -178,8 +182,9 @@
     var game_loop = null; //setInterval(update, TIME_PER_FRAME);
 
     //bike1
-    var bike1_x = 60;
-    var bike1_y = 60;
+    var bike1 = null;
+    // var bike1_x = 60;
+    // var bike1_y = 60;
     var bike1_color = 0x0000CC;
     var bike1_speed = 10;
     var bike1_direction = "RIGHT";
@@ -188,7 +193,7 @@
     var bike1_powerupFlash = true;
 
 
-    bike1View = arenaView.addBike(bike1_x, bike1_y, bike1_color);
+    
 
     //bike2
     var bike2_x = 630;
@@ -225,7 +230,7 @@
         {
             clearInterval(countDownTimer);
             arenaView.hideCountdownLabel();
-            setup()
+            setup();
         }
         count--;
     }
@@ -233,7 +238,10 @@
     // sets up game
     function setup()
     {
+        console.log("IN setup");
         game_loop = setInterval(update, TIME_PER_FRAME);
+        Model.SetBoardRows(arenaWidth/10);
+        Model.SetBoardColumns(arenaHeight/10);
         // setup arena size
         // arenaWidth
         // arenaHeight
@@ -241,9 +249,13 @@
 
 
         // setup bikes
+        bike1 = new Model.BIKE();
+        bike1View = arenaView.addBike(bike1.row * 10, bike1.column * 10, bike1_color);
         // get speeds
         // get positions
 
+        Model.AddBike(bike1);
+        Model.StartGame();
     }
 
     //begin animation loop
@@ -280,31 +292,32 @@
     {
         // calculate bike movement
         if (bike1_direction == "UP")
-            bike1_y -= bike1_speed;  //w
+            Model.PlayerTurnsNorth(bike1); // bike1_y -= bike1_speed;  //w
         else if (bike1_direction == "LEFT")
-            bike1_x -= bike1_speed;  //a
+            Model.PlayerTurnsWest(bike1); // bike1_x -= bike1_speed;  //a
         else if (bike1_direction == "DOWN")
-            bike1_y += bike1_speed;  //s
+            Model.PlayerTurnsSouth(bike1); // bike1_y += bike1_speed;  //s
         else if (bike1_direction == "RIGHT")
-            bike1_x += bike1_speed;  //d
+            Model.PlayerTurnsEast(bike1); // bike1_x += bike1_speed;  //d
 
         //keep bike in the arena
-        if (bike1_x >= arenaWidth) bike1_x = arenaWidth - bike1_speed;
-        if (bike1_x < 0) bike1_x = 0;
-        if (bike1_y >= arenaHeight) bike1_y = arenaHeight - bike1_speed;
-        if (bike1_y < 0) bike1_y = 0;
+        // if (bike1_x >= arenaWidth) bike1_x = arenaWidth - bike1_speed;
+        // if (bike1_x < 0) bike1_x = 0;
+        // if (bike1_y >= arenaHeight) bike1_y = arenaHeight - bike1_speed;
+        // if (bike1_y < 0) bike1_y = 0;
 
         //draw wall behind bike
-        arenaView.drawWall(bike1View.x, bike1View.y, bike1_x, bike1_y, bike1_color);
+        // arenaView.drawWall(bike1View.x, bike1View.y, bike1_x, bike1_y, bike1_color);
+
+        Model.UpdateObjects();
 
         //move the bike
-        bike1View.x = bike1_x;
-        bike1View.y = bike1_y;
+        bike1View.x = bike1.row * 10; //bike1_x;
+        bike1View.y = bike1.column * 10; //bike1_y;
 
         // bike 1 power up
         if (bike1_powerup)
         {
-            console.log("IN bike1");
             bike1_powerup = false;
             puh1View.changeText("");
             bike1_powerupFlash = false;
@@ -338,7 +351,6 @@
         // bike 2 power up
         if (bike2_powerup)
         {
-            console.log("IN bike2");
             bike2_powerup = false;
             puh2View.changeText("");
             bike2_powerupFlash = false;
@@ -347,11 +359,13 @@
         }
 
         //draw collision when bikes hit eachother
-        if (bike1View.x == bike2View.x && bike1View.y == bike2View.y)
-        {
-            collision1View = arenaView.addCollision(bike1View.x, bike1View.y);
-            collision1View.radius++;
-        }
+        // if (bike1View.x == bike2View.x && bike1View.y == bike2View.y)
+        // {
+        //     collision1View = arenaView.addCollision(bike1View.x, bike1View.y);
+        //     collision1View.radius++;
+        // }
+
+        // Model.UpdateObjects();
     }
 
     function powerUpFlash(player)
@@ -359,7 +373,6 @@
         // clearTimeout(flashTimer);
         if (player == 1)
         {
-            console.log("IN p1");
             if (bike1_powerupFlash == false)
             {
                 puh1View.changeText(bike1_powerupType);
@@ -384,7 +397,6 @@
 
         if (player == 2)
         {
-            console.log("IN p2");
             if (bike2_powerupFlash == false)
             {
                 puh2View.changeText(bike2_powerupType);
@@ -434,7 +446,7 @@
             bike2_direction = "DOWN";
         else if (keyPressed == "L" && bike2_direction != "LEFT")
             bike2_direction = "RIGHT";
-        else if (keyPressed = "H")
+        else if (keyPressed == "H")
             bike2_powerup = true;
     }
 
