--- a/paulsIndex.html
+++ b/paulsIndex.html
@@ -14,7 +14,7 @@
 
     <script src="view.js"></script>
 
-    <script src="spintf.min.js"></script>
+    <script src="sprintf.min.js"></script>
     <script src="Model.js"></script>
     <script src="ModelUnitTests.js"></script>
 
