pu name display updates properly when new game starts.

--- a/index.html
+++ b/index.html
@@ -528,6 +528,14 @@
         resetBikeViewPositions();
         collision1View = null;
         count = 3;
+
+        puh1View.changeText("");
+        player1PowerupName = "";
+        player1PowerupActive = false;
+
+        puh2View.changeText("");
+        player2PowerupName = "";
+        player2PowerupActive = false;
     }
 
 
