--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
     }
 
 
-    var enablePowerupsButton = optionsView.addButton("power ups enabled: yes");
-    enablePowerupsButton.setClickHandler(toggleEnablePowerups);
+    //var enablePowerupsButton = optionsView.addButton("power ups enabled: yes");
+    //enablePowerupsButton.setClickHandler(toggleEnablePowerups);
     var enablePowerupsText = "yes";
 
     function toggleEnablePowerups()
@@ -330,8 +330,8 @@
 
 
 
-    var powerupDurationButton = optionsView.addButton("power up duration: moderate");
-    powerupDurationButton.setClickHandler(togglePowerupDuration);
+    //var powerupDurationButton = optionsView.addButton("power up duration: moderate");
+    //powerupDurationButton.setClickHandler(togglePowerupDuration);
     
     //set default to moderate
     var powerupDurationText = "moderate";
